--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
 
     <dimen name="dp_96">96dp</dimen>
 
+    <dimen name="dp_104">104dp</dimen>
     <dimen name="dp_120">120dp</dimen>
 
     <dimen name="dp_160">160dp</dimen>
