--- a/app/src/main/res/layout/layout_map_contral.xml
+++ b/app/src/main/res/layout/layout_map_contral.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/dp_24">
+    android:paddingTop="@dimen/dp_24"
+    android:paddingBottom="@dimen/dp_24">
 
     <TextView
         android:id="@+id/tv_layout_map_control_satellite"
@@ -14,6 +15,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="@dimen/dp_16"
         android:background="@drawable/bg_map_control"
+        android:layout_marginRight="@dimen/dp_24"
+        android:layout_marginEnd="@dimen/dp_24"
         android:text="@string/satellite" />
 
     <TextView
@@ -22,10 +25,27 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tv_layout_map_control_satellite"
         android:layout_marginRight="@dimen/dp_1"
+        android:layout_marginEnd="@dimen/dp_1"
         android:layout_toLeftOf="@+id/tv_layout_map_control_satellite"
         android:layout_toStartOf="@+id/tv_layout_map_control_satellite"
         android:background="@drawable/bg_map_control_select"
         android:text="@string/map" />
+
+    <TextView
+        android:id="@+id/tv_layout_map_control_flush_cycle"
+        android:layout_width="@dimen/dp_56"
+        android:layout_height="@dimen/dp_56"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:textColor="#3385ff"
+        android:textSize="@dimen/sp_16"
+        android:paddingBottom="@dimen/dp_4"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/dp_72"
+        android:layout_marginRight="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_8"
+        android:background="@drawable/bg_flush_warn"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
