--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -97,7 +97,7 @@
         android:id="@+id/iv_item_order_address"
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
-        android:layout_below="@id/iv_item_order_order"
+        android:layout_below="@id/tv_item_order_order"
         android:layout_alignStart="@id/iv_item_order_order"
         android:layout_alignLeft="@id/iv_item_order_order"
         android:padding="@dimen/dp_4"
