--- a/app/src/main/res/layout/item_handing.xml
+++ b/app/src/main/res/layout/item_handing.xml
@@ -105,7 +105,7 @@
         android:layout_marginLeft="@dimen/dp_4"
         android:layout_marginStart="@dimen/dp_4"
         android:layout_marginTop="@dimen/dp_8"
-        android:padding="@dimen/dp_4"
+        android:padding="@dimen/dp_5"
         android:src="@drawable/ic_order_item"/>
 
     <LinearLayout
@@ -227,15 +227,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/line_item_handing_1"
-        android:layout_marginTop="@dimen/dp_8"
-        android:gravity="right"
+        android:layout_marginTop="@dimen/dp_12"
+        android:gravity="center_vertical|end"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_item_handing_phone_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4"
             android:background="@drawable/bg_ellipse_gay"
             android:ellipsize="end"
             android:gravity="center"
@@ -249,7 +248,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_24"
             android:layout_marginStart="@dimen/dp_24"
-            android:layout_marginTop="@dimen/dp_4"
             android:background="@drawable/bg_ellipse"
             android:ellipsize="end"
             android:gravity="center"
