--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -128,8 +128,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/line_item_order_1"
-        android:gravity="end"
-        android:layout_marginTop="@dimen/dp_8"
+        android:gravity="end|center_vertical"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
@@ -138,7 +138,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dp_24"
             android:layout_marginRight="@dimen/dp_24"
-            android:layout_marginTop="@dimen/dp_4"
             android:background="@drawable/bg_ellipse_gay"
             android:ellipsize="end"
             android:gravity="center"
@@ -152,7 +151,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/dp_24"
             android:layout_marginRight="@dimen/dp_24"
-            android:layout_marginTop="@dimen/dp_4"
             android:background="@drawable/bg_ellipse_gay"
             android:ellipsize="end"
             android:gravity="center"
@@ -164,7 +162,6 @@
             android:id="@+id/tv_item_order_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4"
             android:background="@drawable/bg_ellipse"
             android:ellipsize="end"
             android:gravity="center"
