--- a/app/src/main/res/layout/item_pended.xml
+++ b/app/src/main/res/layout/item_pended.xml
@@ -102,8 +102,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/line_item_pended_1"
-        android:gravity="end"
-        android:layout_marginTop="@dimen/dp_8"
+        android:gravity="end|center_vertical"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
