--- a/app/src/main/res/layout/dialog_modify_reason.xml
+++ b/app/src/main/res/layout/dialog_modify_reason.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_marginLeft="@dimen/dp_8"
             android:layout_marginStart="@dimen/dp_8"
             android:gravity="center"
-            android:text="改约时间："/>
+            android:text="改约时间：" />
 
         <TextView
             android:id="@+id/tv_dialog_modify_title"
@@ -27,7 +27,7 @@
             android:layout_toRightOf="@+id/tv_dialog_reason_title"
             android:gravity="center"
             android:text="请选择时间"
-            android:textColor="@color/colorGray"/>
+            android:textColor="@color/colorGray" />
 
         <ImageView
             android:id="@+id/iv_dialog_modify_title"
@@ -37,16 +37,16 @@
             android:layout_toEndOf="@+id/tv_dialog_modify_title"
             android:layout_toRightOf="@+id/tv_dialog_modify_title"
             android:padding="@dimen/dp_12"
-            android:src="@drawable/ic_calendar_date"/>
+            android:src="@drawable/ic_calendar_date" />
 
         <View
             android:layout_width="@dimen/dp_104"
             android:layout_height="@dimen/px_1"
             android:layout_below="@+id/tv_dialog_reason_title"
+            android:layout_marginTop="@dimen/dp_8_n"
             android:layout_toEndOf="@+id/tv_dialog_reason_title"
             android:layout_toRightOf="@+id/tv_dialog_reason_title"
-            android:layout_marginTop="@dimen/dp_8_n"
-            android:background="@color/colorBlueTheme"/>
+            android:background="@color/colorBlueTheme" />
 
         <ImageView
             android:id="@+id/iv_dialog_modify_reason_cancel"
@@ -59,8 +59,86 @@
             android:layout_marginRight="@dimen/dp_4"
             android:gravity="center"
             android:padding="@dimen/dp_8"
-            android:src="@drawable/ic_delete_gray"/>
+            android:src="@drawable/ic_delete_gray" />
     </RelativeLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_dialog_modify_reason_no_car"
+                android:layout_width="0dp"
+                android:layout_weight="1.5"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="车未到" />
+
+            <RadioButton
+                android:id="@+id/rb_dialog_modify_reason_no_procedures"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="手续未办好" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_dialog_modify_reason_new_address"
+                android:layout_width="0dp"
+                android:layout_weight="1.5"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="联系人要求换地址" />
+
+            <RadioButton
+                android:id="@+id/rb_dialog_modify_reason_new_time"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="联系人要求换时间" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/rb_dialog_modify_reason_conflict"
+                android:layout_width="0dp"
+                android:layout_weight="1.5"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="工单时间冲突，约定时间来不及" />
+
+            <RadioButton
+                android:id="@+id/rb_dialog_modify_reason_no_equip"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="设备携带不足" />
+        </TableRow>
+
+        <RadioButton
+            android:id="@+id/rb_dialog_modify_reason_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_12"
+            android:text="其他原因" />
+    </TableLayout>
 
     <EditText
         android:id="@+id/et_dialog_modify_reason"
@@ -72,7 +150,7 @@
         android:hint="填写改约原因（必填）"
         android:minHeight="@dimen/dp_120"
         android:textColorHint="@color/colorGray"
-        android:textSize="@dimen/sp_14"/>
+        android:textSize="@dimen/sp_14" />
 
     <TextView
         android:id="@+id/tv_dialog_modify_reason_info"
@@ -80,7 +158,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginStart="@dimen/dp_8"
-        android:textColor="@color/colorRed"/>
+        android:textColor="@color/colorRed" />
 
     <Button
         android:id="@+id/btn_dialog_modify_reason_submit"
@@ -93,6 +171,6 @@
         android:layout_marginTop="@dimen/dp_8"
         android:background="@drawable/bg_button_flush"
         android:text="@string/submit"
-        android:textColor="@color/colorWhite"/>
+        android:textColor="@color/colorWhite" />
 
 </LinearLayout>
