--- a/app/src/main/res/layout/view_map_info_window.xml
+++ b/app/src/main/res/layout/view_map_info_window.xml
@@ -20,7 +20,7 @@
             android:ellipsize="end"
             android:lines="1"
             android:maxWidth="@dimen/dp_240"
-            android:text=""
+            android:text="asdf"
             android:textColor="@color/colorWhite"
             android:textSize="@dimen/sp_18"/>
 
@@ -29,10 +29,69 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_4"
-            android:text=""
+            android:text="asdf"
             android:textColor="@color/colorWhite"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_view_map_info_window_electricity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_3"
+        android:text="70%"
+        android:textColor="@color/colorWhite"/>
+
+    <FrameLayout
+        android:id="@+id/fl_view_map_info_window_electricity"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/dp_24">
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="@dimen/dp_32"-->
+        <!--android:layout_height="@dimen/dp_32"-->
+        <!--android:gravity="center"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:paddingEnd="@dimen/dp_8"-->
+        <!--android:paddingLeft="@dimen/dp_6"-->
+        <!--android:paddingRight="@dimen/dp_8"-->
+        <!--android:paddingStart="@dimen/dp_6">-->
+
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="@dimen/dp_6"-->
+        <!--android:layout_weight="1"-->
+        <!--android:src="@color/colorBlueTheme"/>-->
+
+        <!--<View-->
+        <!--android:id="@+id/view_info_window_monitor_electricity"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"/>-->
+        <!--</LinearLayout>-->
+
+        <ProgressBar
+            android:id="@+id/pb_view_map_info_window_electricity"
+            style="@style/Progress_Horizontal"
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_6"
+            android:layout_gravity="center"
+            android:max="100"
+            android:paddingEnd="@dimen/dp_8"
+            android:paddingLeft="@dimen/dp_6"
+            android:paddingRight="@dimen/dp_8"
+            android:paddingStart="@dimen/dp_6"
+            android:progress="50"/>
+
+        <ImageView
+            android:id="@+id/iv_view_info_window_monitor_electricity"
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_32"
+            android:padding="@dimen/dp_4"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_electricity"/>
+
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/iv_view_map_info_window_cancel"
