--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,12 @@
     <style name="MyCheck">
         <item name="android:button">@drawable/bg_checkbox</item>
     </style>
+
+    <style name="Progress_Horizontal">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/progressbar_horizontal</item><!-- progress_horizontal -->
+        <item name="android:indeterminateDrawable">@drawable/progressbar_horizontal</item>
+        <!--<item name="android:minHeight">20dip</item>-->
+        <!--<item name="android:maxHeight">20dip</item>-->
+    </style>
 </resources>
