--- a/app/src/main/res/layout/activity_operate_repair.xml
+++ b/app/src/main/res/layout/activity_operate_repair.xml
@@ -215,7 +215,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/view_activity_operate_default_line_2"
             android:layout_marginTop="@dimen/dp_16"
-            android:text="@string/fault_describe"
+            android:text="@string/repair_suggest"
             android:textStyle="bold"
             />
 
