--- a/app/src/main/res/layout/activity_operate_repair.xml
+++ b/app/src/main/res/layout/activity_operate_repair.xml
@@ -229,10 +229,10 @@
             android:padding="@dimen/dp_8"
             />
 
-        <TextView
-            android:id="@+id/tv_activity_operate_remove_state"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/iv_activity_operate_remove_state"
+            android:layout_width="@dimen/dp_56"
+            android:layout_height="@dimen/dp_32"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_activity_operate_fault_describe"
@@ -240,20 +240,33 @@
             android:layout_marginEnd="@dimen/dp_16"
             android:layout_marginRight="@dimen/dp_16"
             android:layout_marginTop="@dimen/dp_16"
-            android:background="@drawable/bg_button_clickable"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_16"
-            android:paddingRight="@dimen/dp_16"
-            android:paddingTop="@dimen/dp_8"
-            android:text="@string/repair_replace"
-            android:textColor="@color/colorWhite"
-            />
+            android:src="@drawable/bg_switch"/>
+
+        <!--<TextView-->
+            <!--android:id="@+id/tv_activity_operate_remove_state"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_below="@+id/tv_activity_operate_fault_describe"-->
+            <!--android:layout_marginBottom="@dimen/dp_16"-->
+            <!--android:layout_marginEnd="@dimen/dp_16"-->
+            <!--android:layout_marginRight="@dimen/dp_16"-->
+            <!--android:layout_marginTop="@dimen/dp_16"-->
+            <!--android:background="@drawable/bg_button_clickable"-->
+            <!--android:paddingBottom="@dimen/dp_8"-->
+            <!--android:paddingLeft="@dimen/dp_16"-->
+            <!--android:paddingRight="@dimen/dp_16"-->
+            <!--android:paddingTop="@dimen/dp_8"-->
+            <!--android:text="@string/repair_replace"-->
+            <!--android:textColor="@color/colorWhite"-->
+            <!--/>-->
 
         <RelativeLayout
             android:id="@+id/rl_activity_operate_replace"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_activity_operate_remove_state"
+            android:layout_below="@id/iv_activity_operate_remove_state"
             android:layout_marginTop="@dimen/dp_16"
             android:focusable="true"
             android:focusableInTouchMode="true"
