--- a/app/src/main/res/layout/layout_repair_explain_unchangeable.xml
+++ b/app/src/main/res/layout/layout_repair_explain_unchangeable.xml
@@ -14,6 +14,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="车在地下车库，已正常上线"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_12" />
 
         <RadioButton
@@ -22,6 +23,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="无任何问题，正常上线"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_12" />
     </TableRow>
 
@@ -36,6 +38,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="维修换卡"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_12" />
 
         <RadioButton
@@ -44,6 +47,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="设备电源人为破坏，接线松动"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_12" />
     </TableRow>
 
@@ -58,6 +62,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="设备人为拆卸导致脱落"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_12" />
 
         <RadioButton
@@ -66,6 +71,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="其他"
+            android:textColor="@color/colorText"
             android:textSize="@dimen/sp_12" />
     </TableRow>
 
