--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/bg_item">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_item_no_top">
 
     <TextView
         android:id="@+id/tv_item_order_name"
@@ -11,10 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_8"
         android:layout_marginRight="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_8"
         android:lines="1"
         android:text="@string/app_name"
         android:textColor="@color/colorGrayBlack"
-        android:textSize="@dimen/sp_20"/>
+        android:textSize="@dimen/sp_20" />
 
     <LinearLayout
         android:id="@+id/ll_item_order"
@@ -29,9 +30,9 @@
             android:id="@+id/tv_item_order_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_13"
+            android:text="orderNo"
             android:textColor="@color/colorGray"
-            android:text="orderNo"/>
+            android:textSize="@dimen/sp_13" />
 
         <View
             android:layout_width="@dimen/dp_1"
@@ -39,15 +40,15 @@
             android:layout_gravity="center"
             android:layout_marginLeft="@dimen/dp_8"
             android:layout_marginRight="@dimen/dp_8"
-            android:background="@color/colorGray"/>
+            android:background="@color/colorGray" />
 
         <TextView
             android:id="@+id/tv_item_order_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_13"
+            android:text="time"
             android:textColor="@color/colorGray"
-            android:text="time"/>
+            android:textSize="@dimen/sp_13" />
 
         <TextView
             android:id="@+id/tv_item_order_modify"
@@ -56,9 +57,9 @@
             android:layout_marginLeft="@dimen/dp_2"
             android:layout_marginStart="@dimen/dp_2"
             android:text="@string/modify"
-            android:textSize="@dimen/sp_13"
             android:textColor="@color/colorGray"
-            android:visibility="visible"/>
+            android:textSize="@dimen/sp_13"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_item_order_late"
@@ -67,59 +68,59 @@
             android:layout_marginLeft="@dimen/dp_2"
             android:layout_marginStart="@dimen/dp_2"
             android:text="(迟到)"
-            android:textSize="@dimen/sp_13"
             android:textColor="@color/colorRed"
-            android:visibility="visible"/>
+            android:textSize="@dimen/sp_13"
+            android:visibility="visible" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_item_order_order"
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
-        android:layout_marginStart="@dimen/dp_8"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_8"
         android:layout_below="@id/ll_item_order"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_marginTop="@dimen/dp_8"
         android:padding="@dimen/dp_4"
-        android:src="@drawable/ic_order_item"/>
+        android:src="@drawable/ic_order_item" />
 
     <TextView
         android:id="@+id/tv_item_order_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_2"
-        android:layout_toRightOf="@+id/iv_item_order_order"
-        android:layout_toEndOf="@+id/iv_item_order_order"
         android:layout_alignTop="@+id/iv_item_order_order"
-        android:text="order_info"/>
+        android:layout_toEndOf="@+id/iv_item_order_order"
+        android:layout_toRightOf="@+id/iv_item_order_order"
+        android:padding="@dimen/dp_2"
+        android:text="order_info" />
 
     <ImageView
         android:id="@+id/iv_item_order_address"
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
-        android:layout_below="@id/tv_item_order_order"
-        android:layout_alignStart="@id/iv_item_order_order"
         android:layout_alignLeft="@id/iv_item_order_order"
+        android:layout_alignStart="@id/iv_item_order_order"
+        android:layout_below="@id/tv_item_order_order"
         android:padding="@dimen/dp_4"
-        android:src="@drawable/ic_address_item"/>
+        android:src="@drawable/ic_address_item" />
 
     <TextView
         android:id="@+id/tv_item_order_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_2"
-        android:layout_toRightOf="@+id/iv_item_order_address"
-        android:layout_toEndOf="@+id/iv_item_order_address"
         android:layout_alignTop="@+id/iv_item_order_address"
-        android:text="address"/>
+        android:layout_toEndOf="@+id/iv_item_order_address"
+        android:layout_toRightOf="@+id/iv_item_order_address"
+        android:padding="@dimen/dp_2"
+        android:text="address" />
 
     <View
         android:id="@+id/line_item_order_1"
         android:layout_width="match_parent"
         android:layout_height="@dimen/px_1"
-        android:layout_marginTop="@dimen/dp_8"
         android:layout_below="@id/tv_item_order_address"
-        android:background="@color/color_cut_line_gray"/>
+        android:layout_marginTop="@dimen/dp_8"
+        android:background="@color/color_cut_line_gray" />
 
     <LinearLayout
         android:id="@+id/ll_item_order_"
@@ -128,8 +129,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/line_item_order_1"
-        android:gravity="end|center_vertical"
         android:layout_marginTop="@dimen/dp_12"
+        android:gravity="end|center_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -143,7 +144,7 @@
             android:gravity="center"
             android:lines="1"
             android:maxEms="6"
-            android:text="@string/app_name"/>
+            android:text="@string/app_name" />
 
         <TextView
             android:id="@+id/tv_item_order_map"
@@ -156,7 +157,7 @@
             android:gravity="center"
             android:lines="1"
             android:maxEms="6"
-            android:text="查看路线"/>
+            android:text="查看路线" />
 
         <TextView
             android:id="@+id/tv_item_order_start"
@@ -168,7 +169,18 @@
             android:lines="1"
             android:maxEms="6"
             android:text="签到"
-            android:textColor="@color/colorBlueTheme"/>
+            android:textColor="@color/colorBlueTheme" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/iv_item_order_new"
+        android:layout_width="@dimen/dp_24"
+        android:layout_height="@dimen/dp_24"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="@dimen/dp_32"
+        android:layout_marginRight="@dimen/dp_32"
+        android:src="@color/colorOrange" />
 </RelativeLayout>
