添加改的需求

--- a/app/src/main/res/drawable/bg_item_no_top.xml
+++ b/app/src/main/res/drawable/bg_item_no_top.xml
@@ -11,7 +11,6 @@
 
     <padding
         android:bottom="@dimen/dp_8"
-        android:left="@dimen/dp_8"
-        android:right="@dimen/dp_8"/>
+        android:left="@dimen/dp_8"/>
 
 </shape>
